# ml-playground

huggingsound-transcribe/: output_file.txt  pyproject.toml  transcribe.py
split-audio/: pyproject.toml  split.py
transcribe-youtube/: pyproject.toml  transcribe-pl.py
translate-polish-transcription/: input_file.txt  output_file.txt  pl-translator.py  pyproject.toml
whisper/: audio.json  audio.srt  audio.tsv  audio.vtt  output.txt  pyproject.toml  whisper-pl.py
