[tool.poetry]
name = "transcribe-youtube"
version = "0.1.0"
description = "Transcribe youtube"
authors = ["Filip Dahlberg"]
readme = "README.md"
packages = [{include = "transcribe_youtube"}]

[tool.poetry.dependencies]
python = "3.11.2"
transformers = "^4.27.4"
torch = "^2.0.0"
torchaudio = "^2.0.1"
youtube-dl = "^2021.12.17"
pytube = "^12.1.3"
ffmpeg = "^1.4"
pydub = "^0.25.1"
soundfile = "^0.12.1"
moviepy = "^1.0.3"

[tool.poetry.group.dev.dependencies]
transformers = "^4.27.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
